header fixing align

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ button {
 
 .header.scrolled .header__name {
   font-size: 1.575rem;
-  left: 2rem;
+  left: 0rem;
   top: 50%;
   transform: translateY(-50%);
   position: absolute;
@@ -213,7 +213,7 @@ button {
 
 .header__tiktok {
   position: absolute;
-  right: 1.25rem;
+  right: 0rem;
   top: 1rem;
   display: flex;
   align-items: center;
@@ -1061,7 +1061,7 @@ button {
 /* --- Tablet (48rem+) --- */
 @media (min-width: 48rem) {
   main {
-    max-width: 37.5rem;
+    max-width: 120rem;
   }
 
   .hero {
@@ -1244,6 +1244,53 @@ button {
     height: 3.125rem;
   }
 
+  .header.scrolled {
+  background-color: rgba(0, 0, 0, 0.59);
+  backdrop-filter: blur(0.75rem);
+  -webkit-backdrop-filter: blur(0.75rem);
+  box-shadow: 0 0.25rem 1.875rem rgba(0, 0, 0, 0.08);
+}
+
+.menu-scrolled {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.25rem;
+  transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header.scrolled .menu-scrolled {
+  padding: 0 2rem;
+  height: 4rem;
+  display: block;
+  position: relative;
+}
+
+.header__name {
+  font-family: 'Merriweather', serif;
+  font-weight: 700;
+  font-size: 2.25rem;
+  line-height: 1.3;
+  letter-spacing: -0.09rem;
+  color: var(--multi-brown-mid);
+  white-space: nowrap;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header.scrolled .header__name {
+  font-size: 1.575rem;
+  left: 2rem;
+  top: 50%;
+  transform: translateY(-50%);
+  position: absolute;
+  margin: 0;
+}
+
   .profile__img {
     width: 13.75rem;
     height: 13.75rem;
@@ -1327,8 +1374,6 @@ button {
   justify-content: center;
   gap: 3rem;
 }
-
-
 
   .stylist-card__inner {
     width: 26.25rem;
